# axhat-stack-template

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  fly.toml  tailwind.config.js
bg-shader/: Cargo.toml
bg-shader/src/: lib.rs  shader.wgsl
posts/: building-web-services-with-axum.md  error-handling-in-rust.md  htb-headless-writeup.md  rust-ownership-explained.md
public/: bg.js  input.css  tailwind_generated.css
public/bg-shader/: bg_shader.js  bg_shader_bg.wasm
src/: blog.rs  main.rs  routes.rs  templates.rs
templates/: base.html  blog.html  index.html  latest_posts.html  post.html
